[package]
name = "tutorial_8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.15.1"
bevy-inspector-egui = "0.28.1"
bevy_color = "0.15.2"
bevy_rapier3d = "0.28.0"
bevy_third_person_camera = "0.2.0"
